Exchange huge '*.png' files for '*.jpeg'; Align footer sections in %; Adjust home-bg.png image; Fix vertical-align images in events-box

--- a/Live the webpage/styles/less/footer.less
+++ b/Live the webpage/styles/less/footer.less
@@ -25,14 +25,17 @@ footer{
   }
   > div:first-of-type{
     border-bottom: thin solid rgba(74, 74, 74, 0.8);
+
+    .copyright-info, .authors-info, .images-resource-info{ width: 26.381766382%; }
+    .contacts-info { width: 20.85470085%; }
     .copyright-info, .authors-info, .images-resource-info, .contacts-info{
-      .footer-section-wrapper;
-      width: 25%;
+
       float: left;
       height: 100%;
       box-sizing: border-box;
       padding: 40px 0 30px 0;
       line-height: 25px;
+      .footer-section-wrapper;
 
       span:first-of-type {
         color: #B297C4;
