--- a/Live the webpage/styles/less/image-slider.less
+++ b/Live the webpage/styles/less/image-slider.less
@@ -8,7 +8,7 @@
   position: relative;
   margin: 0;
   height: 440px - @border-trl-width;
-  background: url("../../images/slider-bg.png") no-repeat 50% 14%;
+  background: url("../../images/slider-bg.jpg") repeat-x 50% 14%;
   width: @fixed-page-width - @border-trl-width * 2;
   border-left: @border-trl-style;
   border-right: @border-trl-style;
