--- a/Live the webpage/styles/less/index.less
+++ b/Live the webpage/styles/less/index.less
@@ -15,9 +15,7 @@ body {
   }
 }
 
-*:not(footer  *){
-  .user-select(none);
-}
+*{ .user-select(none); }
 
 @import "headery";
 @import "contents";
