--- a/Live the webpage/styles/less/mixins.less
+++ b/Live the webpage/styles/less/mixins.less
@@ -33,8 +33,10 @@
   @vertical: `@{orientation} == 'vertical'`;
   @both: `@{orientation} == 'both'`;
 
-  & when (@horisontal){
-    /* ... */
+  & when (@vertical){
+    position: relative;
+    top: 50%;
+    transform: translate(0, -50%);
   }
 
   & when (@both){
